--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
     contrib-readme-job:
+        permissions: write-all
         runs-on: ubuntu-latest
         name: A job to automate contrib in readme
         steps:
