--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,13 @@ on:
     push:
         branches:
             - main
+    pull_request:
+        types:
+          - opened
+          - synchronize
+          - reopened
+    schedule:
+        - cron: '0 0 * * *'
 
 jobs:
     contrib-readme-job:
